welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: value =+ is not a member of Int
			y=+;z=x;
                         ^