welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
	var i = num.length ; var y=0 ; var z=0
	for (x<- 0 to i-1) {
		if (num(x)!=z) {
			y=+;z=x;
		}
	}
	return y
	
}
